--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,3 @@
-buildscript {
-	ext {
-		queryDslVersion = "5.0.0"
-	}
-}
 
 plugins {
 	id 'java'
@@ -33,6 +28,7 @@ dependencies {
 	// webflux
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+	implementation 'io.projectreactor:reactor-core'
 
 	// db
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
@@ -45,4 +41,6 @@ dependencies {
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+
+	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.108.Final:osx-aarch_64'
 }
