--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,13 @@
+spring:
+  r2dbc:
+    url: r2dbc:pool:mysql://localhost:3306/devfest?useUnicode=true&serverTimezone=Asia/Seoul
+    username: root
+    password: Esperer123!
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
+logging:
+  level:
+    org.springframework.r2dbc.core: debug
