create redis config

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
 	// db
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	implementation 'org.redisson:redisson-spring-boot-starter:3.21.1'
 	implementation 'io.asyncer:r2dbc-mysql:1.0.4'
 
 	// lombok
