--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,9 @@ dependencies {
 
 	// db
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
-	implementation 'org.redisson:redisson-spring-boot-starter:3.21.1'
-	implementation 'io.asyncer:r2dbc-mysql:1.0.4'
+	implementation 'org.redisson:redisson-spring-boot-starter:3.17.6'
+	implementation 'io.asyncer:r2dbc-mysql:0.9.7'
+	implementation 'dev.miku:r2dbc-mysql:0.8.2.RELEASE'
 
 	// lombok
 	compileOnly 'org.projectlombok:lombok'
