--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	implementation 'io.projectreactor:reactor-core'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// db
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
